--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
                     <li><a href="index.html">Главная</a></li>
                     <li><a href="login.html">Профиль</a></li>
                     <li><a href="faq.html">Поддержка</a></li>
-                    <li><a href="aboutus.html">О нас</a></li>
                 </ul>
             </nav>
         </div>
@@ -29,7 +28,7 @@
             <input type="text" placeholder="Куда">
             <p>Туда</p> <input type="date">
             <p>Обратно</p> <input type="date">
-            <button>Найти билеты</button>
+            <a href="results.html">Найти билеты</a>
         </div>
     </section>
 
